--- a/examenTableView/Base.lproj/Main.storyboard
+++ b/examenTableView/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" red="0.93278416450000001" green="0.21226332549999999" blue="0.19473205669999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellMariposa" rowHeight="162" id="EQq-sz-LPh" userLabel="CellMariposa" customClass="TableViewCellController" customModule="examenTableView" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellMariposa" rowHeight="162" id="EQq-sz-LPh" userLabel="CellMariposa" customClass="TableViewCell" customModule="examenTableView" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="162"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="EQq-sz-LPh" id="rTg-fX-4cl" customClass="TableViewCell" customModule="examenTableView" customModuleProvider="target">
@@ -36,7 +36,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XAu-A4-wwX">
-                                                    <rect key="frame" x="192" y="58" width="154" height="41"/>
+                                                    <rect key="frame" x="192" y="57" width="154" height="42"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                     <color key="textColor" red="0.067329510872353046" green="0.40654743020304573" blue="0.21443913220737199" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
@@ -46,8 +46,8 @@
                                             <color key="backgroundColor" red="0.43146170859999999" green="0.73099498060000001" blue="0.28383871669999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="imagenCell" destination="RVC-V9-GK4" id="T7v-6N-m6C"/>
-                                            <outlet property="nombreCell" destination="XAu-A4-wwX" id="BK6-UI-GE5"/>
+                                            <outlet property="imagenCell" destination="RVC-V9-GK4" id="efp-Ve-TBk"/>
+                                            <outlet property="nombreCell" destination="XAu-A4-wwX" id="E7K-pJ-kbN"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -119,7 +119,7 @@
         <!--View 2-->
         <scene sceneID="88s-sB-EPm">
             <objects>
-                <viewController id="uVy-p3-pYt" userLabel="View 2" sceneMemberID="viewController">
+                <viewController id="uVy-p3-pYt" userLabel="View 2" customClass="ViewController2" customModule="examenTableView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TGf-N5-Qld">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -135,13 +135,30 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rHO-g4-85f">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellCollection" id="rHO-g4-85f" customClass="CollectionCell" customModule="examenTableView" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="130" height="134"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="130" height="134"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hxM-v6-SUa">
+                                                    <rect key="frame" x="6" y="9" width="118" height="94"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3si-GI-G2C">
+                                                    <rect key="frame" x="4" y="106" width="124" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </view>
+                                        <connections>
+                                            <outlet property="imagenCollectionCell" destination="hxM-v6-SUa" id="aiO-IE-J93"/>
+                                            <outlet property="labelCollectionCell" destination="3si-GI-G2C" id="aN7-91-mCm"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -150,6 +167,9 @@
                         <viewLayoutGuide key="safeArea" id="2LN-Sj-kd9"/>
                     </view>
                     <navigationItem key="navigationItem" id="akb-4c-pil"/>
+                    <connections>
+                        <outlet property="collectionView" destination="ynA-6q-322" id="0eV-7q-wlx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i3v-pS-vvb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
