--- a/examenTableView/Base.lproj/Main.storyboard
+++ b/examenTableView/Base.lproj/Main.storyboard
@@ -49,10 +49,15 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="like" translatesAutoresizingMaskIntoConstraints="NO" id="Vtr-BY-LXN">
+                                                    <rect key="frame" x="314" y="109" width="61" height="42"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" red="0.43146170859999999" green="0.73099498060000001" blue="0.28383871669999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="imageLike" destination="Vtr-BY-LXN" id="htW-pC-8nj"/>
                                             <outlet property="imagenCell" destination="RVC-V9-GK4" id="efp-Ve-TBk"/>
                                             <outlet property="nombreCell" destination="XAu-A4-wwX" id="E7K-pJ-kbN"/>
                                             <outlet property="tipoCell" destination="rj3-04-tNR" id="uIr-13-cuE"/>
@@ -257,4 +262,7 @@
             <point key="canvasLocation" x="1092" y="993"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="like" width="32" height="32"/>
+    </resources>
 </document>
